test/kube2e/istio/artifacts/automtls-helm.yaml
global:
  istioSDS:
    enabled: true
  glooMtls:
    istioProxy:
      image:
        repository: proxyv2
        registry: docker.io/istio
        tag: 1.18.2 # This tag has to match the version of Istio being used in the test
gloo:
  logLevel: info
  disableLeaderElection: true
  deployment:
    #  We have limited GitHub action resources which can cause containers to not create
    # therefore we lessen the cpu resource requests values from the default (500m) to 100m.
    resources:
      requests:
        cpu: 100m
        memory: 256Mi
    customEnv:
      # The experimental API is disabled by default, so we must explicitly enable it on the deployment
      - name: GG_EXPERIMENTAL_K8S_GW_CONTROLLER
        value: "true"
gatewayProxies:
  gatewayProxy:
    podTemplate:
      resources:
        requests:
          cpu: 100m
          memory: 256Mi
    healthyPanicThreshold: 0

# These values are recommended production values and are not expected to impact tested behavior for the Istio suite
settings:
  invalidConfigPolicy:
    replaceInvalidRoutes: true
    invalidRouteResponseCode: 404
    invalidRouteResponseBody: Gloo Gateway has invalid configuration.
gateway:
  persistProxySpec: true
  logLevel: info
  validation:
    allowWarnings: true
    alwaysAcceptResources: false
