test/kube2e/istio/artifacts/peerauth_disable.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "test"
  namespace: "istio-system"
spec:
  mtls:
    mode: DISABLE
