test/kube2e/istio/artifacts/peerauth_strict.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "test"
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
